--- a/frontend/todo-app/src/index.css
+++ b/frontend/todo-app/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html{
+  font-size: 16px;
+}
+/* 
+@media (min-width: 768px) {
+  html{
+    font-size: 14px;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 1024px) {
+  html{
+    font-size: 16px;
+  }
+} */
+
+body {
+  background-image: url('./bg.jpg');
+  background-size: cover;
+  background-position: top center;
 }
